1.16-3.0.14:
- Fixed the broken counter again

1.16-3.0.13:
- Fixed the broken counter (wouldn't keep state on reload)

1.16-3.0.12:
- Phit fixed a problem with the spawner configuration

1.16-3.0.11:
- When the crafter is upgraded it will keep it's current settings

1.16-3.0.10:
- Made the spawner code a bit more robust (and no longer crashing) in case of an invalid syringe

1.16-3.0.9:
- Fixed the charged porter and syringe durability indicators no longer working

1.16-3.0.8:
- Syringe no longer appears in every creative tab
- Correct translation for Syringe
- Forgot the recipe for the syringe
- Update to latest McJtyLib

1.16-3.0.7-beta:
- Fixed a crash in the inventory checker when setting illegal slot values
- Fixed a potential issue with restoring the player with a matter transmitter

1.16-3.0.6-beta:
- Update to Forge 33.0.22

3.0.5-beta:
- Fixed a problem on servers

3.0.4-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes
- Fixed a problem with spawner configuration loading on servers

3.0.3-beta:
- Fixed a client access problem on server side

3.0.2-beta:
- Added a few more 1.16 mods to the spawner configuration
- Fixed a potential exploit which could be used to attack a server

2.1.7:
- Spawner configuration is now a server config (located in <world>/serverconfig/rftoolsutility-mobdata.toml)

3.0.0-beta:
- First port to 1.16.2 (spawner is still broken)

2.1.6:
- The Spawner is back!

2.1.5-beta:
- Use the new tick order handler system in RFToolsBase
- Fixed a problem with the shield template being partially invisible when a smaller block was adjacent to it

2.1.4-beta:
- Fixed a potential problem in the dialer in case a dimension was missing
- Fixed a memory leak in the shield projector when the world is unloaded (fake player)
- Fixed a problem with the shield projector where it would crash if it gives player damage to a mob that retaliates to the player in some way (like vindicators)