@@ -1,3 +1,6 @@
+Upcoming:
+- The redstone screen module works again
+
 1.16-3.0.14:
 - Fixed the broken counter again
 
